# dev-gettsim

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CLAUDE.md  README.md  conftest.py  dev-gettsim.code-workspace  pull_all_repos.zsh  pyproject.toml
