[project]
name = "dev-gettsim"
version = "0.1.0"
description = "Pixi workspace for ttsim, gettsim, gettsim-personas, and soep-preparation."
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
deepdiff = "*"
ipykernel = "*"
pygraphviz = "*"
python = "~=3.14.0"
pytest-xdist = "*"

[tool.pixi.pypi-dependencies]
jaxtyping = "*"
dags = ">=0.4.2"
ttsim-backend = { path = "ttsim", editable = true }
mettsim = {path = "ttsim/src_mettsim", editable = true}
gettsim = { path = "gettsim", editable = true }
gettsim-personas = { path = "gettsim-personas", editable = true }
soep-preparation = { path = "soep-preparation", editable = true }
pdbp = "*"

# Features
# --------------------------------------------------------------------------------------

[tool.pixi.feature.jax]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.feature.jax.pypi-dependencies]
jax = ">=0.8"
# jax-datetime = { git = "https://github.com/google/jax-datetime.git" }

[tool.pixi.feature.cuda]
platforms = ["linux-64"]
system-requirements = {cuda = "13"}

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = {version = ">=0.8", extras = ["cuda13"]}

[tool.pixi.feature.metal]
platforms = ["osx-arm64"]

[tool.pixi.feature.metal.target.osx-arm64.pypi-dependencies]
jax = ">=0.8"
jax-metal = ">=0.1.1"

[tool.pixi.feature.ty.pypi-dependencies]
ty = ">=0.0.9"
types-PyYAML = "*"
types-pytz = "*"

# Tasks
# --------------------------------------------------------------------------------------

[tool.pixi.feature.test.tasks]
tests = "pytest"

[tool.pixi.feature.jax.tasks]
tests-jax = "pytest --backend=jax"

[tool.pixi.feature.cuda.tasks]
tests-jax = "pytest --backend=jax"

[tool.pixi.feature.ty.tasks]
ty = "ty check"

# Environments
# --------------------------------------------------------------------------------------

[tool.pixi.environments]
py314-cuda = ["test", "cuda"]
py314-jax = ["test", "jax"]
py314-metal = ["test", "metal"]
ty = ["ty"]


# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py313"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812", # Avoid conflicts with ruff-format
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use an f-string literal
    "F722", # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FIX002", # Line contains TODO -- Use stuff from TD area.
    "ICN001", # numpy should be np, but different convention here.
    "ISC001", # Avoid conflicts with ruff-format
    "N999", # Allow non-ASCII characters in file names.
    "PLC2401", # Allow non-ASCII characters in variable names.
    "PLC2403", # Allow non-ASCII function names for imports.
    "PLR0913", # Allow many arguments in function definitions.
    "PLR5501", # elif not supported by vectorization converter for Jax
    "TC002", # Move third-party import into a type-checking block
    "TC003", # Move standard library import into a type-checking block
    "TRY003", # Avoid specifying long messages outside the exception class
]
exclude = []

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["ANN", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# ======================================================================================
# ty configuration
# ======================================================================================

[tool.ty.environment]
root = ["."]

[tool.ty.src]
respect-ignore-files = false
exclude = ["**/.pixi/"]

[tool.ty.rules]
invalid-return-type = "error"
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

[[tool.ty.overrides]]
include = ["ttsim/**"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"

[[tool.ty.overrides]]
include = ["gettsim/**"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"

[[tool.ty.overrides]]
include = ["gettsim/docs/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"


# ======================================================================================
# pytest configuration
# ======================================================================================

[tool.pytest.ini_options]
addopts = ["--pdbcls=pdbp:Pdb", "--import-mode=importlib"]
filterwarnings = [
    "ignore:.*XMLParser*:DeprecationWarning",
    "ignore:.*'tree.iter()'*:PendingDeprecationWarning",
    "ignore:.*Sorting*:FutureWarning",
    "ignore:The TerminalReporter.writer attribute is",
    "ignore:Repeated execution of the test suite",
    "ignore:Using or importing the ABCs from 'collections'",
    "ignore:Explicitly requested dtype .*64 requested in zeros_like"
]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
    "skipif_jax: skip test if backend is jax",
    "skipif_numpy: skip test if backend is numpy"
]
