[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "dev-gettsim"
version = "0.1.0"
description = "Pixi workspace for ttsim, gettsim, gettsim-personas, and soep-preparation."
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.pixi.dependencies]
deepdiff = "*"
ipykernel = "*"
pygraphviz = "*"
prek = "*"
[tool.pixi.environments]
py314 = [ "tests", "py314" ]
py314-jax = [ "py314", "tests", "jax" ]
py314-cuda = [ "py314", "tests", "cuda" ]
py314-metal = [ "py314", "tests", "metal" ]
type-checking = [ "py314", "type-checking" ]
type-checking-jax = [ "py314", "type-checking-jax", "jax" ]
[tool.pixi.feature.cuda]
platforms = [ "linux-64" ]
system-requirements = { cuda = "13" }
[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = ">=0.8", extras = [ "cuda13" ] }
[tool.pixi.feature.cuda.target.linux-64.tasks]
tests-jax = "pytest --backend=jax"
[tool.pixi.feature.jax]
platforms = [ "linux-64", "osx-arm64", "win-64" ]
[tool.pixi.feature.jax.pypi-dependencies]
jax = ">=0.8"
[tool.pixi.feature.jax.target.linux-64.tasks]
tests-jax = "pytest --backend=jax"
[tool.pixi.feature.jax.target.osx-arm64.tasks]
tests-jax = "dot -c && pytest --backend=jax"
[tool.pixi.feature.jax.target.win-64.tasks]
tests-jax = "pytest --backend=jax"
[tool.pixi.feature.metal]
platforms = [ "osx-arm64" ]
[tool.pixi.feature.metal.target.osx-arm64.pypi-dependencies]
jax = ">=0.8"
jax-metal = ">=0.1.1"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
[tool.pixi.feature.tests.activation.env]
# Mirror the per-package test activation: every workspace test env runs
# with all three claws on, so a local `pixi run -e py314 tests` matches
# the CI matrix that activates the same gates per package.
TTSIM_BEARTYPE_CLAW = "1"
GETTSIM_BEARTYPE_CLAW = "1"
GETTSIM_PERSONAS_BEARTYPE_CLAW = "1"
[tool.pixi.feature.tests.pypi-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.target.linux-64.tasks]
tests = "pytest"
[tool.pixi.feature.tests.target.osx-64.tasks]
tests = "dot -c && pytest"  # dot -c needed for pygraphviz on macOS
[tool.pixi.feature.tests.target.osx-arm64.tasks]
tests = "dot -c && pytest"  # dot -c needed for pygraphviz on macOS
[tool.pixi.feature.tests.target.win-64.tasks]
tests = "pytest"
[tool.pixi.feature.type-checking-jax.pypi-dependencies]
ty = ">=0.0.9"
[tool.pixi.feature.type-checking-jax.tasks]
ty-jax = "ty check"
[tool.pixi.feature.type-checking.pypi-dependencies]
ty = ">=0.0.9"
[tool.pixi.feature.type-checking.tasks]
ty = "ty check"
[tool.pixi.pypi-dependencies]
# jax-datetime = { git = "https://github.com/google/jax-datetime.git" }
jaxtyping = "*"
dags = { git = "https://github.com/OpenSourceEconomics/dags.git", branch = "main" }
ttsim-backend = { path = "ttsim", editable = true }
mettsim = { path = "ttsim/src_mettsim", editable = true }
gettsim = { path = "gettsim", editable = true }
gettsim-personas = { path = "gettsim-personas", editable = true }
soep-preparation = { path = "soep-preparation", editable = true }
pdbp = "*"
[tool.pixi.tasks]
lint-all = { cmd = 'for d in gettsim gettsim-personas soep-preparation ttsim; do echo "=== $d ===" && (cd $d && prek run --all-files) || exit 1; done' }
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812",  # Avoid conflicts with ruff-format
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "F722",    # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FIX002",  # Line contains TODO -- Use stuff from TD area.
  "ICN001",  # numpy should be np, but different convention here.
  "ISC001",  # Avoid conflicts with ruff-format
  "N999",    # Allow non-ASCII characters in file names.
  "PLC2401", # Allow non-ASCII characters in variable names.
  "PLC2403", # Allow non-ASCII function names for imports.
  "PLR0913", # Allow many arguments in function definitions.
  "PLR5501", # elif not supported by vectorization converter for Jax
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Avoid specifying long messages outside the exception class
]
per-file-ignores."conftest.py" = [ "ANN", "D", "INP001" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.tasks",
  "tool.pixi.feature.type-checking.pypi-dependencies",
  "tool.pixi.feature.type-checking.tasks",
  "tool.pixi.feature.type-checking-jax.pypi-dependencies",
  "tool.pixi.feature.type-checking-jax.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.tasks",
  "tool.pixi.workspace",
]

[tool.ty]
environment.root = [ "." ]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.ineffective-final = "error"
rules.invalid-argument-type = "error"
rules.invalid-enum-member-annotation = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-legacy-positional-parameter = "error"
rules.invalid-return-type = "error"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-missing-submodule = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-awaitable = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"
src.respect-ignore-files = false
src.exclude = [ "**/.pixi/", "**/.claude/" ]
[[tool.ty.overrides]]
include = [ "ttsim/**" ]
analysis.allowed-unresolved-imports = [ "jax", "jax.numpy", "jax.ops" ]
rules.empty-body = "ignore"
rules.invalid-return-type = "ignore"
rules.invalid-type-form = "ignore"
[[tool.ty.overrides]]
include = [ "gettsim/**" ]
rules.empty-body = "ignore"
rules.invalid-return-type = "ignore"
[[tool.ty.overrides]]
include = [ "gettsim/docs/**" ]
rules.invalid-argument-type = "ignore"
rules.unresolved-attribute = "ignore"

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb", "--import-mode=importlib" ]
ini_options.norecursedirs = [ ".pixi", "docs", "bld" ]
ini_options.testpaths = [
  "ttsim/tests",
  "ttsim/src_mettsim/tests_middle_earth",
  "gettsim/src/gettsim/tests_germany",
  "gettsim-personas/tests",
  "soep-preparation/tests",
]
ini_options.filterwarnings = [
  "ignore:.*XMLParser*:DeprecationWarning",
  "ignore:.*'tree.iter()'*:PendingDeprecationWarning",
  "ignore:.*Sorting*:FutureWarning",
  "ignore:The TerminalReporter.writer attribute is",
  "ignore:Repeated execution of the test suite",
  "ignore:Using or importing the ABCs from 'collections'",
  "ignore:Explicitly requested dtype .*64 requested in zeros_like",
]
ini_options.markers = [
  "wip: Tests that are work-in-progress.",
  "unit: Flag for unit tests which target mainly a single function.",
  "integration: Flag for integration tests which may comprise of multiple unit tests.",
  "end_to_end: Flag for tests that cover the whole program.",
  "skipif_jax: skip test if backend is jax",
  "skipif_numpy: skip test if backend is numpy",
]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"
